--- a/nginx.conf
+++ b/nginx.conf
@@ -48,10 +48,10 @@ http {
           try_files $uri /images/placeholder.jpg;
         }
         location /api/catalogue/ { proxy_pass http://catalogue-dev.sdevops09.online:8080/; }
-        #location /api/user/ { proxy_pass http://user-dev.sdevopsb09.online:8080/; }
-        #location /api/cart/ { proxy_pass http://cart-dev.sdevopsb09.online:8080/; }
-        #location /api/shipping/ { proxy_pass http://shipping-dev.sdevopsb09.online:8080/; }
-        #location /api/payment/ { proxy_pass http://payment-dev.sdevopsb09.online:8080/; }
+        location /api/user/ { proxy_pass http://user-dev.sdevops09.online:8080/; }
+        location /api/cart/ { proxy_pass http://cart-dev.sdevops09.online:8080/; }
+        location /api/shipping/ { proxy_pass http://shipping-dev.sdevops09.online:8080/; }
+        location /api/payment/ { proxy_pass http://payment-dev.sdevops09.online:8080/; }
 
         location /health {
           stub_status on;
